fixed the text alignment

--- a/html-css/week2/style.css
+++ b/html-css/week2/style.css
@@ -28,10 +28,12 @@ body {
 #text1-body {
   text-align: left;
   width: 70%;
+  text-align: justify;
 }
 
 p {
   font-size: 20px;
+  text-align: justify;
 }
 
 .grey-box {
